--- a/index.Rmd
+++ b/index.Rmd
@@ -5,11 +5,11 @@ output: html_document
 
 ## Project title
 
-Give your project a concise, interesting title that summarizes the entirety of your project
+In the Dog Pound
 
 ### Authors
 
-Names of your team members
+Olivia Do, Cathy Nguyen, Jenny Suk, and Leo Zheng
 
 ### Date
 
@@ -17,7 +17,7 @@ Winter 2022
 
 ### Abstract
 
-No more than three sentences that summarize your project. Focus on the very most important aspects. For example: (1) "Our main question is .... This question is important because .... To address the question, we will ...." (2) "We are concerned with ..., because .... To address this concern, we plan to ...." (3) "Consider that .... This is important because .... Accordingly, we plan to ...."
+Our focus is on the population of dogs in shelters. Focusing on the statistics of certain breed of dogs in the shelter, the gender, age, coat and whether or not they are fixed, to see the duration of how long they tend to stay in the shelter. To address this subject we will compare the statistics provided from the alldogdescprition data provided from the pudding dataset with each other.
 
 ### Keywords
 
