--- a/index.Rmd
+++ b/index.Rmd
@@ -89,11 +89,11 @@ Here's an example of how to run an R script inside an RMarkdown file:
 Problems: getting the color to go on the bars, and changing the order of the bars
 ```{r, echo=FALSE}
 library(ggplot2)
-ggplot(allDogDescriptions, aes(x = age, fill = age)) +
-  geom_bar()+
-  labs(title = "Age of Dogs in Shelters",
-       x = "Age",
-       y = "Quantity of Dogs in Shelters") 
+# ggplot(allDogDescriptions, aes(x = age, fill = age)) +
+#   geom_bar()+
+#   labs(title = "Age of Dogs in Shelters",
+#        x = "Age",
+#        y = "Quantity of Dogs in Shelters") 
 ```
 
 
@@ -107,13 +107,10 @@ Describe why you chose this chart and what information it reveals
 
 ### Chart 3
 
-Include a chart
-```{r chart 3, echo=FALSE}
+```{r chart 3, echo=FALSE, warning=FALSE}
 source('histogram.R')
 hist
 
 ```
 
-Describe why you chose this chart and what information it reveals
-
-By splitting this histogram into different facets, we attempt to show the number of days that a dog typically remains in a shelter based on their gender Using a histogram helps visualize the frequency distribution of the dataset making it is easier to tell how many days are the most or least common for a dog to stay for. The graphs reveal that a majority of dogs stay for around 1200 days. Additionally, they are skewed right, meaning that the number of dogs that stay past 1200 days decreases as time goes on. Several possible outliers exist as well, which are most likely those that have stayed for over 6000 days. Another piece of information that this visualization expresses is that a dog's gender does not play a large role in its adoption since we see that the mode heavily outnumbers the other values. 
+By splitting this histogram into different facets, it attempts to show the number of days that a dog typically remains in a shelter based on their gender. Using a histogram helps visualize the frequency distribution of the dataset making it is easier to tell how many days are the most or least common for a dog to stay for. The graphs reveal that a majority of dogs stay for around 1200 days. Additionally, they are skewed right, meaning that the number of dogs that stay past 1200 days decreases as time goes on. Several possible outliers exist as well, which are most likely those that have stayed for over 6000 days. Another piece of information that this visualization expresses is that a dog's gender does not play a large role in its adoption since we see that the mode heavily outnumbers the other values. 
